--- a/src/scss/default.scss
+++ b/src/scss/default.scss
@@ -17,6 +17,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+  padding-bottom: 172px;
 }
 img,
 svg {
