--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,9 +8,11 @@
   margin: 0 auto;
   display: flex;
   align-items: center;
+  gap: 25px;
+  justify-content: space-between;
 }
 .header__logo {
-  margin-right: 94px;
+  margin-right: 69px;
 }
 .header__search {
   flex-grow: 1;
@@ -23,4 +25,36 @@
 }
 .header__favorite-btn:hover {
   color: tomato;
+}
+
+@media (max-width: 1024px) {
+  .header__conteiner {
+    padding: 0 22px;
+  }
+  .header__search {
+    margin-right: 90px;
+  }
+}
+@media (max-width: 768px) {
+  .header__conteiner {
+    padding: 0 15px;
+    max-width: 610px;
+  }
+  .header__logo {
+    margin-right: 12px;
+  }
+  .header__search {
+    margin-right: 0;
+  }
+}
+@media (max-width: 560px) {
+  .header__conteiner {
+    // элементы могут переноситься
+    flex-wrap: wrap;
+  }
+  .header__search {
+    // переносим в конец, чтобы поиск упал вниз
+    order: 1;
+    flex-basis: 100%;
+  }
 }
