--- a/src/scss/track.scss
+++ b/src/scss/track.scss
@@ -77,3 +77,12 @@
 .track--active:hover .track__img-wrap:after {
   background-color: #fff;
 }
+@media (max-width: 560px) {
+  .track {
+    padding: 3px;
+    border-width: 1px;
+  }
+  .track__info {
+    padding: 8px;
+  }
+}
