--- a/src/scss/track__info.scss
+++ b/src/scss/track__info.scss
@@ -4,8 +4,20 @@
 
 .track-info__title {
   font-weight: 600;
+  margin-bottom: 6px;
 }
+
 .track-info__artist {
   font-weight: 300;
   font-size: 14px;
+}
+@media (max-width: 560px) {
+  .track-info__title {
+    font-size: 14px;
+    margin-bottom: 4px;
+    border-radius: 14px;
+  }
+  .track-info__artist {
+    font-size: 8px;
+  }
 }
