--- a/src/scss/player.scss
+++ b/src/scss/player.scss
@@ -56,7 +56,7 @@
   background-image: url("../images/like-o.svg");
 }
 
-.player__progress--wrap {
+.player__progress-wrap {
   display: flex;
   align-items: center;
   gap: 16px;
@@ -109,7 +109,7 @@
   gap: 4px;
 }
 
-.player__volume--wrap {
+.player__volume-wrap {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -148,4 +148,76 @@
 }
 .player__icon--mute-off {
   background-image: url("../images/volume-off.svg");
+}
+
+@media (max-width: 1024px) {
+  .player__container {
+    grid-template-columns: 1fr 1fr 2fr 1fr;
+  }
+}
+
+@media (max-width: 968px) {
+  .player {
+    right: 34px;
+    left: 34px;
+    padding: 22px 60px;
+    border-radius: 30px;
+  }
+  .player--active {
+    bottom: 24px;
+  }
+  .player__container {
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 27px;
+  }
+  .player__progress-wrap {
+    order: 1;
+    grid-column: 1 / -1;
+  }
+  .player__progress {
+    max-width: none;
+  }
+  .player__controller {
+    justify-self: center;
+  }
+  .player__volume-wrap {
+    justify-self: end;
+  }
+}
+
+@media (max-width: 740px) {
+  .player {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  .player--active {
+    bottom: 0;
+  }
+  .player__container {
+    grid-template-columns: 1fr 1fr;
+  }
+  .player__progress-wrap {
+    padding-left: 0;
+  }
+  .player__volume-wrap {
+    display: none;
+  }
+  .player__controller {
+    justify-self: end;
+  }
+}
+@media (max-width: 560px) {
+  .player {
+    left: 0;
+    right: 0;
+    gap: 16px;
+    padding: 16px 15px;
+  }
+  .player__container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .player__controller {
+    justify-self: center;
+  }
 }
