--- a/src/scss/track__info.scss
+++ b/src/scss/track__info.scss
@@ -12,11 +12,14 @@
   font-size: 14px;
 }
 @media (max-width: 560px) {
+  .track-info--mobile-center {
+    text-align: center;
+  }
   .track-info__title {
     font-size: 14px;
     margin-bottom: 4px;
-    border-radius: 14px;
   }
+
   .track-info__artist {
     font-size: 8px;
   }
