--- a/src/scss/track.scss
+++ b/src/scss/track.scss
@@ -73,6 +73,9 @@
   opacity: 1;
   background-color: rgba(255, 255, 255, 0.7);
 }
+.track--pause .track__img-wrap:after {
+  background-image: url(../images/play.svg);
+}
 
 .track--active:hover .track__img-wrap:after {
   background-color: #fff;
