--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -13,7 +13,7 @@ body {
   background-image: url(../img/global/background.jpg);
   background-repeat: no-repeat;
   background-position: top center;
-  background-size: cover;
+  background-size: contain;
   background-attachment: fixed;
   padding-bottom: 172px;
 
